--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "~0.1.3",
     "karma-coffee-preprocessor": "~0.2.1",
+    "karma-coverage": "^0.2.6",
     "karma-firefox-launcher": "~0.1.3",
     "karma-html2js-preprocessor": "~0.1.0",
     "karma-junit-reporter": "^0.2.2",
@@ -34,6 +35,7 @@
     "node": ">=0.8.0"
   },
   "scripts": {
-    "test": "grunt karma:dev:start"
+    "test": "grunt karma:dev:start",
+    "test-ci": "grunt karma:continuous:start"
   }
 }
